force-app/main/default/objects/SIS_Course_Sequence__c/SIS_Course_Sequence__c.object-meta.xml
<CustomObject>
    <description>Séquences et activités liées à un cours.
Section 7 des syllabus.</description>
    <label>Séquence du cours</label>
    <nameField>
        <label>Séquence du cours</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Séquences du cours</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>