force-app/main/default/objects/SIS_Course_Sequence__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En ligne / On-line</fullName>
            </value>
            <value>
                <fullName>Présentiel / In-class</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>