force-app/main/default/objects/SIS_Course_Sequence__c/fields/SIS_External_ID_2__c.field-meta.xml
<CustomField>
    <fullName>SIS_External_ID_2__c</fullName>
    <label>Identifiant Externe 2</label>
    <type>TextArea</type>
</CustomField>