force-app/main/default/objects/SIS_Course_Sequence__c/fields/SIS_Sequence_Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>SIS_Sequence_Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Séquences du cours</relationshipLabel>
    <relationshipName>SIS_Sequences_Course</relationshipName>
    <type>Lookup</type>
</CustomField>