force-app/main/default/objects/SIS_Course_Sequence__c/fields/SIS_Sequence_Description__c.field-meta.xml
<CustomField>
    <fullName>SIS_Sequence_Description__c</fullName>
    <label>Description de la séquence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>