force-app/main/default/objects/SIS_Course_Sequence__c/fields/SIS_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>SIS_Sequence_Number__c</fullName>
    <description>Ordre de la séquence dans le cours</description>
    <label>Numéro de la séquence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>