force-app/main/default/objects/SIS_Course_Sequence__c/fields/SIS_Sequence_Resources__c.field-meta.xml
<CustomField>
    <fullName>SIS_Sequence_Resources__c</fullName>
    <inlineHelpText>Champ caché rempli automatiquement</inlineHelpText>
    <label>Ressources de la séquence</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>